# elf-stuff

./: README.md
code/: elfscure.c  reducebind.c
code/burneye-1.0.1/: LICENSE  QUICKSTART_README  TODO.hints
code/burneye-1.0.1/doc/: DIST-README  README  _NOT_IMPLEMENTED_per-function-encryption.txt  auxv.txt  hostify.txt  reed-solomon.txt
code/burneye-1.0.1/patches/: README
code/burneye-1.0.1/src/: BANNER-BURNEYE  Makefile  burneye.c  regress.sh  rstest.c
code/eh_frame/: eh_frame.c
code/objobf-0.5.0/: LICENSE
code/objobf-0.5.0/doc/: CHANGES  FAQ  LICENSE.info  LINKING  README  objobf.1
code/objobf-0.5.0/src/: Makefile  codegen.c  codegen.h  datahandler.c  datahandler.h  func_handling.c  (+9 more)
code/pk_packer_v3/: Makefile.am  Makefile.in  README  config.status  configure  configure.ac  configure.in.bak  create_arch_lds.sh  syscalls.h
code/pk_packer_v3/autom4te.cache/: output.1  output.3  requests  traces.0  traces.1  traces.2  traces.3
code/pk_packer_v3/includes/: opts.h  stub.h  syscalls.h  syscalls_32.h  syscalls_64.h  types.h  wrap.h
code/pk_packer_v3/stub/: Makefile  Makefile.am  Makefile.in  elf.c  err.c  exec.c  funcs.c  main.c  out  rc4.c  stack.c  stack_mmap.c  stub.h  stub.lds  stub64.lds
code/pk_packer_v3/stub/.deps/: elf.Po  err.Po  exec.Po  funcs.Po  main.Po  rc4.Po  stack.Po
code/pk_packer_v3/wrapper/: Makefile  Makefile.am  Makefile.in  Makefile.old  elf.c  key.c  misc.c  usage.c  wrap.c  wrap.h
code/pk_packer_v3/wrapper/.deps/: elf.Po  key.Po  misc.Po  usage.Po  wrap.Po
code/sherlocked_dev/: Makefile  README  script.py  stub.c
(+67 files in other folders)
